syntax = "proto3";

option go_package = "./;proto";
option java_package = "org.example.protobuf";

message TestMessage {
  string Title = 1;
  string Content = 2;
  int64 Timestamp = 3;
}