syntax = "proto3";

option go_package = "./;proto";
option java_package = "org.example.protobuf";

message Test2Message {
  string Message = 1;
  int64 MessageNumber = 2;
  int64 Timestamp = 3;
}